Don't try to install tile graphics on non-tiles builds (Napkin).
This bit is already handled elsewhere in the Makefile, even!

--- a/crawl-ref/source/Makefile
+++ b/crawl-ref/source/Makefile
@@ -1380,7 +1380,7 @@ ifdef ANDROID
   shareddir_fp =
 endif
 
-install-data: $(GENERATED_FILES) $(DESTTILEFILES)
+install-data: $(GENERATED_FILES)
 ifeq ($(DESTDIR)$(prefix)$(ANDROID),)
 	@echo Neither "DESTDIR" nor "prefix" defined -- nowhere to install to, aborting.
 	@exit 1
