Don't send Travis email notifications for most passing builds.
Same rules as for IRC: all failing builds, and passing builds when the
previous build on that branch failed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,11 @@ git:
 install: perl .travis/deps.pl
 script: perl .travis/build.pl
 notifications:
-#    email:
-#        - crawl-ref-commits@lists.sourceforge.net
+    email:
+        on_success: change
+        on_failure: always
+#        recipients:
+#          - crawl-ref-commits@lists.sourceforge.net
     irc:
         channels: "chat.freenode.net##crawl-dev"
         on_success: change
