--- a/crawl-ref/Makefile.libretro
+++ b/crawl-ref/Makefile.libretro
@@ -1,4 +1,5 @@
 DEBUG=0
+HAVE_OPENGL=0
 
 UNAME=$(shell uname -a)
 
@@ -22,19 +23,19 @@ COMMONFLAGS :=
 ifneq (,$(findstring unix,$(platform)))
    TARGET := $(TARGET_NAME)_libretro.so
 	fpic := -fPIC
-   COMMONFLAGS += -msse -msse2 -DUNIX -DUSE_FB
+   COMMONFLAGS += -msse -msse2 
 	LDFLAGS += -lpthread
    LDFLAGS += -shared -Wl,--version-script=libretro/link.T -Wl,--no-undefined
 else ifneq (,$(findstring osx,$(platform)))
    TARGET := $(TARGET_NAME)_libretro.dylib
 	fpic := -fPIC
-   COMMONFLAGS += -DUNIX -DUSE_RETROGL -DDARWIN_NO_CARBON 
+   COMMONFLAGS += -DDARWIN_NO_CARBON 
    CXXFLAGS += -stdlib=libc++
    LDFLAGS += -dynamiclib -stdlib=libc++ -framework OpenGL
 else ifneq (,$(findstring ios,$(platform)))
    TARGET := $(TARGET_NAME)_libretro_ios.dylib
 	fpic := -fPIC
-	COMMONFLAGS += -marm -DUNIX -DHAVE_POSIX_MEMALIGN -DUSE_RETROGL -DGLES
+	COMMONFLAGS += -marm -DHAVE_POSIX_MEMALIGN -DGLES
    CPPFLAGS += -stdlib=libc++ 
    LDFLAGS += -dynamiclib -marm -stdlib=libc++ -framework OpenGLES
    CC = clang -arch armv7 -isysroot $(IOSSDK) -miphoneos-version-min=5.0
@@ -56,7 +57,13 @@ include Makefile.common
 
 OBJECTS     += $(SOURCES_C:.c=.o) $(SOURCES_CXX:.cc=.o)
 
-COMMONFLAGS += -DFT2_BUILD_LIBRARY -DHAVE_FDATASYNC -D__LIBRETRO__ -DSQLITE_OMIT_LOAD_EXTENSION -DUSE_TILE -DUSE_TILE_LOCAL -DWIZARD -DUSE_FT $(fpic) -DPROPORTIONAL_FONT=\"DejaVuSans.ttf\" -DMONOSPACED_FONT=\"DejaVuSansMono.ttf\"
+COMMONFLAGS += -DFT2_BUILD_LIBRARY -DHAVE_FDATASYNC -D__LIBRETRO__ -DSQLITE_OMIT_LOAD_EXTENSION -DUSE_TILE -DUSE_TILE_LOCAL -DWIZARD -DUSE_FT $(fpic) -DPROPORTIONAL_FONT=\"DejaVuSans.ttf\" -DMONOSPACED_FONT=\"DejaVuSansMono.ttf\" -DUNIX
+
+ifeq ($(HAVE_OPENGL), 1)
+COMMONFLAGS += -DUSE_RETROGL
+else
+COMMONFLAGS += -DUSE_FB
+endif
 
 # Build flags
 CXXFLAGS += -std=c++11
