--- a/crawl-ref/Makefile.common
+++ b/crawl-ref/Makefile.common
@@ -1,4 +1,4 @@
-INCFLAGS := -I$(CORE_DIR)/source/rltiles -I$(CORE_DIR)/source/contrib/lua/src -I$(CORE_DIR)/source/contrib/pcre -I$(CORE_DIR)/source -I$(CORE_DIR)/source/contrib/libpng -I$(CORE_DIR)/source/contrib/zlib -I$(CORE_DIR)/source/contrib/freetype/include -I$(CORE_DIR)/source/contrib/sqlite
+INCFLAGS := -I$(CORE_DIR)/source/rltiles -I$(CORE_DIR)/source/contrib/lua/src -I$(CORE_DIR)/source/contrib/pcre -I$(CORE_DIR)/source -I$(CORE_DIR)/source/contrib/libpng -I$(CORE_DIR)/source/contrib/zlib -I$(CORE_DIR)/source/contrib/freetype/include -I$(CORE_DIR)/source/contrib/sqlite -I$(CORE_DIR)/libretro/libco
 
 ## Build object list
 CCSOURCES   += $(wildcard $(CORE_DIR)/source/*.cc) $(wildcard $(CORE_DIR)/source/rltiles/*cc) $(wildcard $(CORE_DIR)/source/prebuilt/*cc) \
