--- a/crawl-ref/Makefile.libretro
+++ b/crawl-ref/Makefile.libretro
@@ -45,11 +45,20 @@ else ifneq (,$(findstring ios,$(platform)))
    COMMONFLAGS += -marm -DHAVE_POSIX_MEMALIGN -DGLES -DUNIX -DDARWIN_NO_CARBON
    CPPFLAGS += -stdlib=libc++ 
    LDFLAGS += -dynamiclib -marm -stdlib=libc++
-   CC = clang -arch armv7 -isysroot $(IOSSDK) -miphoneos-version-min=5.0
-   CXX = clang++ -arch armv7 -isysroot $(IOSSDK) -miphoneos-version-min=5.0   
+   CC       = cc  -arch armv7 -isysroot $(IOSSDK) -miphoneos-version-min=5.0
+   CXX      = c++ -arch armv7 -isysroot $(IOSSDK) -miphoneos-version-min=5.0   
    HAVE_NEON = 1
 ifeq ($(HAVE_OPENGL), 1)
    LDFLAGS += -framework OpenGLES
+endif
+ifeq ($(platform),ios9)
+CC     += -miphoneos-version-min=8.0
+CXX    += -miphoneos-version-min=8.0
+CFLAGS += -miphoneos-version-min=8.0
+else
+CC     += -miphoneos-version-min=5.0
+CXX    += -miphoneos-version-min=5.0
+CFLAGS += -miphoneos-version-min=5.0
 endif
 else ifneq (,$(findstring win,$(platform)))
    CC = gcc
